Hook up employee_zone page, fix CSS center alignment with mx-auto.

--- a/content/static/base.css
+++ b/content/static/base.css
@@ -15,3 +15,11 @@ h1{
 .card-text{
     font-size:.5em;
 }
+
+.float-center{
+    float:center;
+}
+
+.small{
+    font-size:.5em;
+}
